css/style.css
/* ... */
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0px 0px 15px;
  color: #0b0f28;
  font-weight: 700;
}

h1 {
  font-size: 43px;
}

h2 {
  font-size: 31px;
  color: #FFF;
}

h3 {
  font-size: 22px;
}

h4 {
  font-size: 16px;
}

.lead {
  font-size: 20px;
}

a {
  color: #0b0f28;
  -webkit-transition: 0.3s color;
  transition: 0.3s color;
}

a:hover,
a:focus {
  text-decoration: none;
  outline: none;
  color: #dd0a37;
}



.yolool ol {
  margin: 1;
  padding: 1;
  list-style-type: upper-roman;
}

ul,
ol {
  margin: 0;
  padding: 0;
  list-style: none
}

.main-hd {
  display: inline-block;
  padding: 14px 25px;
  color: #FFF;
  text-transform: uppercase;
  border: none;
  border-radius: 2px;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.main-btn {
  display: inline-block;
  padding: 14px 50px;
  background: #dd0a37;
  color: #FFF;
  text-transform: uppercase;
  border: none;
  border-radius: 2px;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.main-btn3 {
  display: inline-block;
  padding: 14px 50px;
  background: #dd0a37;
  color: #FFF;
  text-transform: uppercase;
  border: none;
  border-radius: 2px;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

i {
  margin-top: -12px;
}


.main-btn:hover,
.main-btn:focus {
  color: #FFF;
  opacity: 0.8;
}

.input {
  height: 40px;
  width: 100%;
  border: 2px solid #dadada;
  padding: 0px 15px;
  border-radius: 2px;
  -webkit-transition: 0.3s border;
  transition: 0.3s border;
}

textarea.input {
  height: 90px;
  padding: 15px;
}

.input:focus {
  border-color: #dd0a37;
}

/*----------------------------*\
Section
\*----------------------------*/

.section {
  position: relative;
  padding: 90px 0px 20px 0px;
}

.section-bg {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  background-size: cover;
  z-index: -1;
}

.section-title {
  text-align: center;
  margin-bottom: 60px;
}

.section-title .title {
  position: relative;
  text-transform: capitalize;
  font-weight: 900;
  font-size: 42px;
  overflow: hidden;
}

.title2 {
  position: relative;
  font-weight: 700;
  font-size: 20px;
  overflow: hidden;
}


.section-title .title>span {
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  display: inline-block;
  z-index: 10;
  -webkit-transition: 0.6s;
  transition: 0.6s;
}

.section-title .title>span.appear {
  -webkit-transform: translateY(0%);
  -ms-transform: translateY(0%);
  transform: translateY(0%);
}

/*=========================================================
LOGO
===========================================================*/

.navbar-brand {
  padding: 0;
  margin: 15px 0px;
}

.navbar-brand .logo {
  display: inline-block;
}

.navbar-brand .logo>img {
  max-height: 65px;
}

@media only screen and (max-width: 767px) {
  .navbar-brand {
    margin: 15px 15px;
  }
}



#header.transparent-navbar:not(.fixed-navbar) .navbar-brand .logo .logo-img {
  display: none;
}

#header.fixed-navbar .navbar-brand .logo .logo-alt-img {
  display: none;
}

#header:not(.transparent-navbar) .navbar-brand .logo .logo-alt-img {
  display: none;
}

/*=========================================================
NAVIGATION
===========================================================*/

#header {
  position: relative;
  background-color: #FFF;
  border-bottom: 1px solid #0000001a;
  z-index: 80;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

#header.transparent-navbar {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  background-color: transparent;
  border-bottom: 1px solid #DADADA30;
}

#header.fixed-navbar {
  position: fixed !important;
  left: 0;
  right: 0;
  top: 0;
  background: #FFF;
  -webkit-box-shadow: 0px 0px 3px #0003;
  box-shadow: 0px 0px 3px #0003;
  border-bottom: none;
  -webkit-animation: slide-in 0.3s;
  animation: slide-in 0.3s;
}

@-webkit-keyframes slide-in {
  from {
    -webkit-transform: translateY(-100%);
    transform: translateY(-100%);
  }

  to {
    -webkit-transform: translateY(0%);
    transform: translateY(0%);
  }
}

@keyframes slide-in {
  from {
    -webkit-transform: translateY(-100%);
    transform: translateY(-100%);
  }

  to {
    -webkit-transform: translateY(0%);
    transform: translateY(0%);
  }
}

.main-nav li a {
  position: relative;
  padding: 30px 15px;
  color: #0b0f28;
  text-transform: uppercase;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

#header.transparent-navbar .main-nav li a {
  color: #FFF;
}

#header.fixed-navbar .main-nav li a {
  color: #0b0f28;
}

.main-nav li.active a:after {
  content: "";
  height: 3px;
  position: absolute;
  bottom: -3px;
  width: 100%;
  left: 0;
  background: #dd0a37;
}

.main-nav li a:hover,
.main-nav li a:focus {
  background-color: transparent;
  color: #dd0a37;
}

#header.transparent-navbar .main-nav li a:hover {
  color: #dd0a37;
}

.navbar-toggle {
  display: none;
  height: 50px;
  width: 50px;
  text-align: center;
  line-height: 50px;
  margin: 15px;
  padding: 0;
  font-size: 32px;
  color: #0b0f28;
}

#header.transparent-navbar .navbar-toggle {
  color: #FFF;
}

#header.fixed-navbar .navbar-toggle {
  color: #0b0f28 !important;
}

/* Mobile nav */

@media only screen and (max-width: 767px) {
  .main-nav {
    margin: 0px -15px;
    max-height: 0;
    overflow-y: scroll;
    background-color: #FFF;
    -webkit-transition: 0.3s all;
    transition: 0.3s all;
  }

  .main-nav.open {
    max-height: 500px;
  }

  .main-nav li.active a:after {
    display: none;
  }

  #header.transparent-navbar .main-nav li a {
    color: #0b0f28;
  }

  .main-nav li a:hover,
  .main-nav li a:focus,
  .main-nav li.active a {
    background-color: #dd0a37;
    color: #fff !important;
  }

  .navbar-toggle {
    display: block;
  }
}

/*=========================================================
HOME
===========================================================*/

#home {
  height: 100vh;
  position: relative;
}
/* ... */

